docs: add new license

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ $def with(post)
 <link rel="stylesheet" href="./static/css/shards-demo.css?v=1.1.0">
 <link rel="stylesheet" href="./static/css/222.css">
 <link rel="shortcut icon" href="./static/img/lhj.ico">
-<title>银行卡识别系统</title>
+<title>document</title>
 <script src="./static/js/jquery.js"></script>
 <script src="./static/js/jquery.form.js"></script>
 <script src="./static/js/helps.js"></script>
